# snap-stock-analysis

./: .gitignore  README.md  README_NEXT_STEPS.md  setup.sh  股票分析提示词库.md  股票分析系统需求规格说明.md
backend/: README.md  pyproject.toml
backend/app/: celery_app.py  db.py  llm.py  main.py  routes.py  tasks.py
deploy/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: package-lock.json  package.json  tsconfig.json
frontend/components/: MainLayout.tsx
frontend/lib/: ThemeContext.tsx  api.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
